--- a/kadai_001/index.html
+++ b/kadai_001/index.html
@@ -31,38 +31,43 @@
     <!-- 記事 -->
     <article>
       <!-- メインビジュアル -->
-      <section>
+      <!-- 意味を持たないdivで括る -->
+      <div>
         <img src="images/main.png" alt="カメラの画像" class="mainpic">
-      </section>
+      </div>
+
       <!-- About -->
       <section class="about">
         <h2 id="about">About</h2>
       <!-- 説明文 -->
-        <div class="about-flex">
+        <div class="about-inner">
           <img src="images/about.png" alt="人物" class="circle">
-          <div>
-            <h3 class="about-name">Kazuki Asahina</h3>
-            <p>25歳 長野県佐久市出身</p>
-            <p>ソフトウェア業界でマーケティングに従事</p>
-            <p>趣味はカメラ、愛機はCanon</p>
-            <p>自然を撮影するのが好きで、海や山によく行く</p>
+          <div class="content">
+            <p class="name">Kazuki Asahina</p>
+            <ul>
+              <li>25歳 長野県佐久市出身</li>
+              <li>ソフトウェア業界でマーケティングに従事</li>
+              <li>趣味はカメラ、愛機はCanon</li>
+              <li>自然を撮影するのが好きで、海や山によく行く</li>
+            </ul>
           </div>
         </div>
       </section>
+
       <!-- Works -->
-      <section id="works">
-        <h2 class="index-h2">Works</h2>
-        <div class="works-flex">
-          <div class="works-item">
-            <img class="works-photo" src="images/works1.png" alt="日本海">
+      <section class="works">
+        <h2 id="works">Works</h2>
+        <div class="works-innner">
+          <div class="item">
+            <img src="images/works1.png" alt="日本海">
             <p>新潟に訪れた際に、日本海の雄大さに魅了されて撮影した１枚</p>
           </div>
-          <div class="works-item">
-            <img class="works-photo" src="images/works2.png" alt="長野">
+          <div class="item">
+            <img src="images/works2.png" alt="長野">
             <p>地元長野の木曽町から撮影した、冠雪した御獄山</p>
             </div>
-          <div class="works-item">
-            <img class="works-photo" src="images/works3.png" alt="京都">
+          <div class="item">
+            <img src="images/works3.png" alt="京都">
             <p>京都で撮影した、明け方の古き良き日本の町並み</p>
           </div>
         </div>
